--- a/package.json
+++ b/package.json
@@ -21,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/phodal/luffa/issues"
   },
-  "homepage": "https://github.com/phodal/luffa#readme"
+  "homepage": "https://github.com/phodal/luffa#readme",
+  "devDependencies": {
+    "grunt": "^0.4.1",
+    "grunt-karma": "*",
+    "load-grunt-tasks": "^3.2.0",
+    "karma-jasmine": "*",
+    "karma-phantomjs-launcher": "*",
+    "karma-chrome-launcher": "*"
+  }
 }
