--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,8 @@
   ],
   "dependencies": {
     "jasmine-core": "jasmine#~2.4.1",
-    "jasmine-jquery": "~2.1.1"
+    "jasmine-jquery": "~2.1.1",
+    "jsdom": "~7.2.1",
+    "virtual-dom": "~2.1.1"
   }
 }
