--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "devDependencies": {
     "grunt": "^0.4.1",
     "grunt-browserify": "^4.0.1",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-karma": "*",
+    "grunt-replace": "^0.11.0",
     "html2hscript": "^1.2.1",
     "is-object": "^1.0.1",
     "karma-chrome-launcher": "*",
