--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt": "^0.4.1",
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-karma": "*",
     "grunt-replace": "^0.11.0",
     "html2hscript": "^1.2.1",
