--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-browserify": "^4.0.1",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-watch": "^0.6.1",
+    "karma": "^0.13.15",
     "grunt-karma": "*",
     "grunt-replace": "^0.11.0",
     "html2hscript": "^1.2.1",
