--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,12 @@ node_js:
   - '0.12'
 notifications:
   email: false
-before_install: npm install -g bower;npm install -g grunt-cli;npm install -g browserify;
+before_install:
+ - npm install -g bower
+ - npm install -g grunt-cli
+ - npm install -g browserify
+- export CHROME_BIN=chromium-browser
+ - export DISPLAY=:99.0
+ - sh -e /etc/init.d/xvfb start
+ 
 install: bower install; npm install
