--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,12 @@ before_install:
  - npm install -g bower
  - npm install -g grunt-cli
  - npm install -g browserify
- - wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
- - sudo sh -c 'echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google.list'
+ - export DISPLAY=:99.0 
+ - sh -e /etc/init.d/xvfb start
  - sudo apt-get update
- - sudo apt-get install google-chrome-stable
- - export CHROME_BIN=chromium-browser
- - export DISPLAY=:99.0
+ - sudo apt-get install -y libappindicator1 fonts-liberation
+ - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+ - sudo dpkg -i google-chrome*.deb
+ - export CHROME_BIN=/usr/bin/google-chrome 
  - sh -e /etc/init.d/xvfb start
 install: bower install; npm install
